--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <title><%= page.title || page.posts.first().title || 'Tim G. Thomas' %></title>
+  <title><%= (page.title || page.posts.first().title) +  ' · Tim G. Thomas' %></title>
   <link rel="alternate" href="http://feeds.feedburner.com/timgthomas" title="Tim G. Thomas" type="application/rss+xml">
   <link rel="icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic|Fira+Mono">
