add main nav for speaking

--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -13,6 +13,10 @@
   <header role="banner">
     <div class="container">
       <h1><a href="/">Tim <em>G</em> Thomas</a></h1>
+      <nav>
+        <a href="/">Blog</a>
+        <a href="/speaking">Speaking</a>
+      </nav>
     </div>
   </header>
   <aside>
