--- a/themes/tria-2019/layout/speaking.hbs
+++ b/themes/tria-2019/layout/speaking.hbs
@@ -2,6 +2,7 @@
   <header>
     <h1>{{page.title}}</h1>
   </header>
+  <p>Interested in having me speak at your next event? <a href="mailto:speaking@timgthomas.com">Get in touch!</a></p>
   <ol class="talk-list">
     {{#each site.data.talks}}
       <li>
