--- a/themes/tria-2019/source/css/style.styl
+++ b/themes/tria-2019/source/css/style.styl
@@ -1,5 +1,9 @@
 // import 'nib'
 
+#__bs_notify__
+  bottom 0
+  top auto !important
+
 alabaster = rgb(241, 242, 237)
 blackrock = rgb( 49,  46,  63)
 
@@ -61,6 +65,7 @@ body
 @import 'partials/_header'
 
 [role='banner']
+  font-size 1.6rem
   position fixed
   top 0
   width 100%
@@ -69,10 +74,17 @@ body
   // background-color alabaster
   box-shadow 0 4px rgba(black, 15%)
 
+  a
+    transition none // RESET
+
+    &:hover
+      color var(--color-heading)
+
   .container
+    align-items center
     box-sizing border-box
     display flex
-    flex-direction column
+    flex-direction row
     align-items stretch
     justify-content space-between
     margin 0 auto
@@ -91,10 +103,6 @@ body
       background-image var(--image-chevron)
       background-size 52px 18px
 
-    @media screen and (min-width: 415px)
-      align-items center
-      flex-direction row
-
   h1
     display inline-block
     margin-left 16px
@@ -106,10 +114,14 @@ body
     background-size 38px 44px
 
     color var(--color-body)
-    font-size 2.4rem
+    font-size inherit
     font-weight 300
     line-height 68px
     text-transform uppercase
+
+    @media screen and (min-width: 512px)
+      &
+        font-size 2.4rem
 
     a
       color currentColor
@@ -145,6 +157,26 @@ body
       padding 8px 32px 8px 16px
       border-bottom none
       border-radius 4px
+
+  nav
+    display flex
+    font-size 1.6rem
+    letter-spacing 0.1rem
+    margin-right 1.6rem
+    text-transform uppercase
+
+    a
+      align-items center
+      color var(--color-body)
+      display flex
+      font-weight 300
+      text-decoration none
+
+      &:hover
+        color var(--color-heading)
+
+    a + a
+      margin-left 1.2rem
 
 aside
   box-sizing content-box
