--- a/themes/tria-2019/layout/_partial/comments.ejs
+++ b/themes/tria-2019/layout/_partial/comments.ejs
@@ -1,16 +1,18 @@
-<h2>Comments</h2>
-<% if (config.disqus_shortname){ %>
+<% if (config.disqus_shortname && env.env === 'production') { %>
+  <h2>Comments</h2>
   <div id="disqus_thread"></div>
   <script>
-    var disqus_shortname = '<%= config.disqus_shortname %>';
-    var disqus_url = '<%= page.permalink %>';
-    var disqus_title = '<%= page.title %>';
-    (function(){
-      var dsq = document.createElement('script');
-      dsq.type = 'text/javascript';
-      dsq.async = true;
-      dsq.src = '//<%= config.disqus_shortname %>.disqus.com/embed.js';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    var disqus_config = function () {
+      this.page.title = '<%= page.title %>';
+      this.page.url = '<%= page.permalink %>';
+      this.page.identifier = '<%= page.canonical_path %>';
+    };
+
+    (function() {
+      var d = document, s = d.createElement('script');
+      s.src = 'https://<%= config.disqus_shortname %>.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
     })();
   </script>
 <% } %>
