--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -6,7 +6,7 @@
   <title><%= (page.title || page.posts.first().title) +  ' · Tim G. Thomas' %></title>
   <link rel="alternate" href="http://feeds.feedburner.com/timgthomas" title="Tim G. Thomas" type="application/rss+xml">
   <link rel="icon" type="image/x-icon" href="/favicon.png">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic|Fira+Mono">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic|Fira+Mono">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
