--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -13,8 +13,10 @@
   <header role="banner">
     <div class="container">
       <h1><a href="/">Tim <em>G</em> Thomas</a></h1>
+      <input id="toggle-nav" type="checkbox">
       <nav>
         <a href="/">Blog</a>
+        <a href="/projects">Projects</a>
         <a href="/speaking">Speaking</a>
       </nav>
     </div>
