--- a/themes/tria-2019/layout/projects.hbs
+++ b/themes/tria-2019/layout/projects.hbs
@@ -2,12 +2,13 @@
   <header>
     <h1>{{page.title}}</h1>
   </header>
-  <p>Interested in having me speak at your next event? <a href="mailto:speaking@timgthomas.com">Get in touch!</a></p>
-  <ol class="talk-list">
+  <ol class="talk-list project-list">
     {{#each site.data.projects}}
       <li>
         <figure>
-          {{!-- <img src="/images/talks/{{this.thumbnail}}"> --}}
+          <div style="background-image: url('/images/project-{{this.id}}.jpg')">
+            {{!-- <img src="/images/talks/{{this.thumbnail}}"> --}}
+          </div>
           <figcaption>
             <h2>{{this.name}}</h2>
             <p>{{this.description}}</p>
