--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -23,7 +23,7 @@
   </header>
   <aside>
     <div class="container">
-      <p>I apply holistic design principles to make the web both usable and beautiful.</p>
+      <p>I apply holistic design principles to make experiences both usable and beautiful.</p>
       <p class="social">
         <a class="social-twitter" href="https://twitter.com/timgthomas" target="_blank" rel="noopener">Twitter</a>
         <a class="social-github" href="https://github.com/timgthomas" target="_blank" rel="noopener">GitHub</a>
