add plausible analytics for testing

--- a/themes/tria-2019/layout/_partial/analytics.ejs
+++ b/themes/tria-2019/layout/_partial/analytics.ejs
@@ -6,4 +6,4 @@
   ga('create', 'UA-49175000-1', 'auto');
   ga('send', 'pageview');
 </script>
-<script src="//s3-us-west-2.amazonaws.com/momently-static/loader/hRdlIwAKARE_momently.js" name="momently-script"></script>
+<script defer data-domain="timgthomas.com" src="https://plausible.io/js/plausible.js"></script>
