add blog layouts

--- a/themes/tgt/layout/layout.ejs
+++ b/themes/tgt/layout/layout.ejs
@@ -14,7 +14,10 @@
       <%- partial('_partial/nav') %>
     </header>
     <main><%- body %></main>
-    <pre><%= JSON.stringify(page.data, null, 2) %></pre>
+    <details>
+      <summary>Site data</summary>
+      <pre><%= JSON.stringify(site.pages, null, 2) %></pre>
+    </details>
     <footer>
       <p>&copy; <%= config.author %>. All rights reserved.</p>
     </footer>
