--- a/themes/tgt/layout/_partial/nav.ejs
+++ b/themes/tgt/layout/_partial/nav.ejs
@@ -1,5 +1,6 @@
+<% const byTitle = (lhs, rhs) => lhs.title.localeCompare(rhs.title) %>
 <nav>
-  <% for (const [label, path] of Object.entries(site.data.menu)) { %>
-    <li><a href="<%= url_for(path) %>"><%= label %></a></li>
+  <% for (const { path, title } of site.pages.data.sort(byTitle)) { %>
+    <li><a href="<%= url_for(path) %>"><%= title %></a></li>
   <% } %>
 </nav>
