--- a/themes/tgt/layout/layout.ejs
+++ b/themes/tgt/layout/layout.ejs
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%- partial('_partial/head') %>
-    <link rel="stylesheet" href="<%= url_for('/css/style.css') %>" />
     <link rel="icon" href="<%= url_for('/favicon.ico') %>" />
+    <link rel="stylesheet" href="<%= url_for('/style.css') %>" />
   </head>
   <body>
     <header>
