--- a/themes/tgt/layout/_partial/article.ejs
+++ b/themes/tgt/layout/_partial/article.ejs
@@ -1,4 +1,4 @@
 <header>
-  <h1 class="constrained" itemprop="headline name"><%= post.title %></h1>
+  <h1 itemprop="headline name"><%= post.title %></h1>
 </header>
-<article class="constrained"><%- post.content %></article>
+<article><%- post.content %></article>
