--- a/themes/tgt/source/style/_variables.scss
+++ b/themes/tgt/source/style/_variables.scss
@@ -1,7 +1,7 @@
 // TODO: What values work well here?
 $breakpoints: (
-  'tablet': 500px,
-  'desktop': 1200px,
+  "tablet": 500px,
+  "desktop": 1200px,
 );
 
 $padding-base: 1rem;
@@ -9,5 +9,11 @@ $padding-base: 1rem;
 // CSS variables
 
 :root {
-  --padding: $padding-base;
+  // TODO: Test and adjust for safe areas
+  --measure: min(50rem, calc(100vw - var(--padding-comfy)));
+
+  // TODO: Looks like this doesn't get replaced in prod?
+  --padding: 1rem; // $padding-base;
+  --padding-comfy: calc(2 * var(--padding));
+  --padding-cozy: calc(var(--padding) / 2);
 }
