clean up some header markup

--- a/themes/tgt/layout/_partial/archive.ejs
+++ b/themes/tgt/layout/_partial/archive.ejs
@@ -1,3 +1,6 @@
+<header>
+  <h1><%= page.title %></h1>
+</header>
 <% site.posts.sort('date', 'desc').each((post) => { %>
 <p>
   <a href="<%- url_for(post.path) %>"><%= post.title %></a>
