--- a/themes/tgt/layout/_partial/masthead.hbs
+++ b/themes/tgt/layout/_partial/masthead.hbs
@@ -1,4 +1,4 @@
-<header class="constrain">
-  <h1><a href="<%= url_for('/') %>">{{config.title}}</a></h1>
-  {{partial '_partial/nav'}}
+<header class="constrain masthead">
+  <h1><a href={{url_for "/"}}>{{config.title}}</a></h1>
+  {{partial "_partial/nav"}}
 </header>
