get some style (heh)

--- a/themes/tgt/layout/_partial/article.ejs
+++ b/themes/tgt/layout/_partial/article.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="title">
   <h1 itemprop="headline name"><%= post.title %></h1>
 </header>
 <article><%- post.content %></article>
