--- a/themes/tgt/source/style/_resets.scss
+++ b/themes/tgt/source/style/_resets.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: inherit;
+  font: inherit;
   line-height: inherit;
   margin: 0;
   padding: 0;
@@ -27,4 +28,8 @@ a {
 
 img {
   max-width: 100%;
+}
+
+li {
+  list-style: none;
 }
