--- a/src/styles/includes/_variables.scss
+++ b/src/styles/includes/_variables.scss
@@ -1,7 +1,7 @@
 // TODO: What values work well here?
 $breakpoints: (
-  "tablet": 500px,
-  "desktop": 1200px,
+  'tablet': 500px,
+  'desktop': 1200px,
 );
 $padding-base: 1rem;
 
