--- a/src/pages/speaking.astro
+++ b/src/pages/speaking.astro
@@ -1,5 +1,7 @@
 ---
+import TalkListItem from '@components/talk-list-item.astro'
 import List from '@layouts/list.astro'
+import talks from '@src/lib/data/talks'
 ---
 
-<List title="Speaking" />
+<List title="Speaking" items={talks} ItemComponent={TalkListItem} />
