--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props
   <body>
     <Masthead title={displayName} />
     <main class="constrain">
-      <header>
+      <header class="title">
         <h1>{title}</h1>
       </header>
       <slot />
