--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,7 +1,6 @@
 ---
-import ProjectListItem from '@components/project-list-item.astro'
 import List from '@layouts/list.astro'
 import projects from '@src/lib/data/projects'
 ---
 
-<List title="Projects" items={projects} ItemComponent={ProjectListItem} />
+<List title="Projects" items={projects} />
