--- a/src/pages/speaking.astro
+++ b/src/pages/speaking.astro
@@ -1,7 +1,6 @@
 ---
-import TalkListItem from '@components/talk-list-item.astro'
 import List from '@layouts/list.astro'
 import talks from '@src/lib/data/talks'
 ---
 
-<List title="Speaking" items={talks} ItemComponent={TalkListItem} />
+<List title="Speaking" items={talks} />
