tweak some layout+behavior

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -14,5 +14,7 @@ const { Content } = await post.render()
 ---
 
 <Main title={post.data.title}>
-  <Content />
+  <div class="prose">
+    <Content />
+  </div>
 </Main>
