--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -29,5 +29,11 @@ body {
 }
 
 .prose {
-  color: deeppink;
+  font-size: 1.6rem;
+  letter-spacing: 0.02em;
+  line-height: 1.618;
+
+  a:link {
+    text-decoration: underline;
+  }
 }
