add view transitions and prose component

--- a/src/components/list-item.astro
+++ b/src/components/list-item.astro
@@ -35,3 +35,10 @@ const buildAlt = (item: ListItem): string => {
     </ul>
   </figcaption>
 </figure>
+
+<style scoped>
+  img {
+    height: 14rem;
+    object-fit: cover;
+  }
+</style>
