--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions'
 import Masthead from '@components/masthead.astro'
 import { displayName } from '../../package.json'
 
@@ -17,6 +18,7 @@ const { title } = Astro.props
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{[title, displayName].filter(Boolean).join(' • ')}</title>
+    <ViewTransitions />
   </head>
   <body>
     <Masthead title={displayName} />
