--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,4 +1,5 @@
 ---
+import Prose from '@components/prose.astro'
 import Main from '@layouts/main.astro'
 import type { GetStaticPaths } from 'astro'
 import { getCollection } from 'astro:content'
@@ -14,7 +15,7 @@ const { Content } = await post.render()
 ---
 
 <Main title={post.data.title}>
-  <div class="prose">
+  <Prose>
     <Content />
-  </div>
+  </Prose>
 </Main>
