--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -1,6 +1,6 @@
 ---
-import { ViewTransitions } from 'astro:transitions'
 import Masthead from '@components/masthead.astro'
+import { ViewTransitions } from 'astro:transitions'
 import { displayName } from '../../package.json'
 
 import '@styles'
@@ -10,6 +10,7 @@ interface Props {
 }
 
 const { title } = Astro.props
+const pageTitle = [title, displayName].filter(Boolean).join(' • ')
 ---
 
 <!doctype html>
@@ -17,7 +18,7 @@ const { title } = Astro.props
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{[title, displayName].filter(Boolean).join(' • ')}</title>
+    <title>{pageTitle}</title>
     <ViewTransitions />
   </head>
   <body>
