--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -34,3 +34,12 @@ const pageTitle = [title, displayName].filter(Boolean).join(' • ')
     </footer>
   </body>
 </html>
+
+<style lang="scss">
+  @import '../styles/includes/typography';
+
+  header {
+    @include type-title;
+    padding-block: var(--padding-spacious) var(--padding-comfy);
+  }
+</style>
