--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -8,12 +8,7 @@ body {
   color: #ccc;
   padding-block: var(--padding-comfy);
 
-  // TODO: Move to font mixin
-  font-family: $font-regular;
-  font-size: 1.8rem;
-  font-weight: 400;
-  letter-spacing: 0.06em;
-  line-height: 1.618;
+  @include type-body;
 }
 
 .constrain {
