prevent search crawling for the beta site

--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -17,6 +17,8 @@ const pageTitle = [title, displayName].filter(Boolean).join(' • ')
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- TODO: Remove before deploying to production! #whatcouldgowrong -->
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{pageTitle}</title>
     <ViewTransitions />
